# anormatch-bot

./: .dockerignore  Dockerfile  README.md  compose.override.yaml  compose.yaml  dev.Dockerfile  pyproject.toml
app/: app.py  bot_commands.py  config.py  enums.py  exceptions.py  http_client.py  keyboards.py  main.py  middlewares.py  states.py  utils.py  validators.py
app/handlers/: likes.py  matches.py  menu.py  profile.py  registration.py  search.py
app/locales/: commands.txt
app/locales/en/LC_MESSAGES/: messages.po
app/locales/ru/LC_MESSAGES/: messages.po
app/locales/uz/LC_MESSAGES/: messages.po
app/schemas/: media.py  place.py  preferences.py  reaction.py  report.py  user.py
app/services/: match.py  media.py  place.py  preferences.py  report.py  user.py
